**TΔ6d Slack 계층 · 로그**